--- a/configs/inference_config.yaml
+++ b/configs/inference_config.yaml
@@ -5,7 +5,8 @@ model:
   # 训练好的模型路径（必须修改为实际路径）
   model_path: "../outputs/grpo_qwen/final_model"
   # 基础模型名称
-  base_model: "Qwen/Qwen2-1.5B-Instruct"
+  # base_model: "Qwen/Qwen2-1.5B-Instruct"
+  base_model: "/home/xrrfolder/models/Qwen2-1.5B-Instruct" 
   # 是否使用LoRA
   use_lora: true
   # LoRA配置（如果use_lora为true）
