--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ bitsandbytes>=0.41.0  # 用于4-bit/8-bit量化训练
 accelerate>=0.25.0    # 用于分布式训练和高效推理
 tqdm>=4.65.0
 matplotlib
+huggingface_hub
+safetensors
