--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,12 @@
             "name": "Python Debugger: Current File",
             "type": "debugpy",
             "request": "launch",
-            "module": "scripts.train.sft_train", 
+            // "module": "scripts.train.sft_train",
+            "module": "main", 
+            // "program": "${file}",
             "console": "integratedTerminal",
-            "python": "/root/miniconda3/envs/mgrpo/bin/python"
+            // "python": "/root/miniconda3/envs/mgrpo/bin/python"
+            "python": "/Users/xiongrengrong/miniconda3/bin/python"
         }
     ]
 }
